--- a/gymEatLanding/src/styles.scss
+++ b/gymEatLanding/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+/****************Colores*****************/
+body * {--red:#E06A67}
+body * {--darkGreen:#26996B}
+body * {--green:#7EE0B9}
+body * {--darkRed:#942926}
+body * {--black:#000000}
+body * {--white:#FFFFFF}
