--- a/gymEatLanding/src/app/nav-bar/nav-bar.component.scss
+++ b/gymEatLanding/src/app/nav-bar/nav-bar.component.scss
@@ -1,3 +1,4 @@
+
 @keyframes degradadoCabecera {
   0% {
       background-position: 0% 50%;
@@ -11,48 +12,91 @@
       background-position: 0% 50%;
   }
 }
-.navBar{
-  display: flex;
-  background-color: rgba(0, 0, 0, 0.8);
-  margin-top: 20px;
-  width: 100%;
-  height: 65px;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-}
 
-.navBar img{
-  background: linear-gradient(90deg,var(--darkRed),var(--darkGreen));
-  background-size: 200% 200%;
-  vertical-align: middle;
-  border-radius: 50%;
-  width: 60px;
-  padding: 10px;
-  animation-name: degradadoCabecera;
-  animation-duration: 2s;
-  animation-iteration-count: infinite;
-}
-.btn1 {
-  padding: 10px;
-  width: 200px;
-  height: 30px;
-  text-align: center;
-  vertical-align: middle;
-  background: none;
-  border: none;
-  font-weight: bold;
-  color: white;
-}
+  .navBar {
+    overflow: hidden;
+    background: none;
+    vertical-align: middle;
+  }
 
-.btn1:hover{
-  background-color: white;
-  border: none;
-  border-radius: 25px;
-  padding: 10px;
-  font-weight: bold;
-  color: black;
-  transform: scale(110%);
-  transition: 0.3s;
-  box-shadow: var(--black) 5px 5px;
-}
+  .navBar img{
+    background: linear-gradient(90deg,#e0e5ec, grey);
+    background-size: 200% 200%;
+    border-radius: 50%;
+    width: 60px;
+    padding: 10px;
+    float: left;
+    display: block;
+    animation-name: degradadoCabecera;
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+    vertical-align: middle;
+    margin-top: 10px;
+    margin-left: 20px;
+    margin-bottom: 10px;
+
+  }
+
+  .navBar a {
+    float: left;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    margin-top: 15px;
+    margin-left: 20px;
+
+  }
+
+  .navBar a:hover {
+    border: none;
+    border-radius: 25px;
+    border-bottom: 2px solid var(--background);
+    font-weight: bold;
+    transition: 0.3s;
+    box-shadow: inset -8px -8px 20px #fff9, inset 8px 8px 20px #0003;
+  }
+
+  .navBar a.active {
+    background-color: #04AA6D;
+    color: white;
+  }
+
+  .navBar .icon {
+    display: none;
+  }
+
+  @media screen and (max-width: 900px) {
+
+
+  }
+
+  @media screen and (max-width: 600px) {
+    .navBar a:not(:first-child) {display: none;}
+    .navBar a.icon {
+      float: right;
+      display: block;
+    }
+    .navBar.responsive {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .navBar.navBar.responsive img{
+      display: none;
+    }
+    .navBar.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .navBar.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
