--- a/gymEatLanding/src/app/footer/footer.component.html
+++ b/gymEatLanding/src/app/footer/footer.component.html
@@ -1,16 +1,34 @@
 <script src="https://kit.fontawesome.com/3696b8c4ec.js" crossorigin="anonymous"></script>
-<div class="topnav" >
-  <a href="#home" class="active">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
-  <a href="javascript:void(0);" class="icon">
-    <i class="fa fa-bars"></i>
-  </a>
+<div class="footer__container">
+
+  <ul class="footer__container--element">
+    <li>
+      <h4 class="footer-list-header">About GymEat</h4></li>
+    <li><a href="#home" class="generic-anchor footer-list-anchor" itemprop="significantLink">Home</a></li>
+    <li><a routerLink="motivacion" class="generic-anchor footer-list-anchor" itemprop="significantLink">Music</a></li>
+    <li><a routerLink="canvas" class="generic-anchor footer-list-anchor" itemprop="significantLink">¿Why GymEat?</a></li>
+
+    <li><a routerLink="/descarga" itemprop="significantLink" class="generic-anchor footer-list-anchor">Download</a></li>
+
+  </ul>
+
+  <ul class="footer__container--element">
+    <li><img src="../../assets/imd/gymEatLogo2-removebg-preview.png" class="generic-anchor footer-list-anchor logo"></li>
+  </ul>
+
+  <ul class="footer__container--element">
+    <li>
+      <h4 class="footer-list-header">Descarga aquí mismo</h4></li>
+    <li><a href='https://github.com/Jesus-GR/AppIonicGymAndEat' target="_blank" class="generic-anchor footer-list-anchor iconoDescarga"> <i class="fa-solid fa-cloud-arrow-down"></i></a></li>
+      <h5>Descargar</h5>
+      <h4>Síguenos en...</h4>
+    <div class="footer__container--rrss">
+      <ul>
+        <li> <a href="https://www.instagram.com" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+        <li><a href="https://es-es.facebook.com" target="_blank"><i class="fa-brands fa-facebook-square"></i></a></li>
+        <li><a href="https://github.com" target="_blank"><i class="fa-brands fa-github-square"></i></a></li>
+        <li><a href="https://www.youtube.com" target="_blank"><i class="fa-brands fa-youtube"></i></a></li>
+      </ul>
+    </div>
+  </ul>
 </div>
-
-  <div class="container__footer--download">
-    <i class="fa-solid fa-download"></i>
-    <h3>Descarga aquí la aplicación</h3>
-  </div>
-
