--- a/gymEatLanding/src/app/nav-bar/nav-bar.component.html
+++ b/gymEatLanding/src/app/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
     <img src="assets/imd/dieta-equilibrada.png" alt="" />
     <a routerLink="/home">Home</a>
     <a routerLink="/motivacion">Music</a>
-    <a routerLink="/motivacion">¿Why GymEat?</a>
+    <a routerLink="/canvas">¿Why GymEat?</a>
     <a routerLink="/descarga">Download</a>
     <a  class="icon" (click)="changeNavBar()">
       <i class="fa fa-bars"></i>
