--- a/gymEatLanding/src/app/footer/footer.component.scss
+++ b/gymEatLanding/src/app/footer/footer.component.scss
@@ -1,51 +1,90 @@
-
-.topnav {
-  overflow: hidden;
-  background-color: #333;
+.footer__container{
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  background-color: rgba(177, 177, 177, 0.8);
 }
 
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+.footer__container--element{
+  list-style:none;
 }
 
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #04AA6D;
+h4{
+  margin-top: 40px;
+  margin-bottom: 50px;
   color: white;
+  font-size: 2em;
 }
 
-.topnav .icon {
-  display: none;
+.footer__container--element li{
+  list-style:none;
+  font-size: 1em;
+  text-align: center;
+  line-height: 4ex;
+  text-decoration:none;
+}
+.footer__container--element i{
+  list-style:none;
+  font-size: 3em;
+  color: black;
+  text-align: center;
 }
 
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
-  .topnav a.icon {
-    float: right;
-    display: block;
+.footer__container--element a{
+ color: black;
+}
+.footer__container--element h5{
+  color: black;
+  text-align: center;
+ }
+
+.footer__container--element:nth-of-type(3){
+  display: flex;
+  flex-direction: column;
+
+}
+
+.footer__container--rrss ul{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 30px;
+}
+
+
+@media screen and (max-width: 1300px) {
+
+  .footer__container{
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    background-color: rgb(177, 177, 177);
+  }
+
+  .footer__container--element:nth-of-type(2){
+    margin-left: -150px;
+  }
+  .footer__container--element:nth-of-type(3){
+    margin-left: -150px;
   }
 }
 
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
+@media screen and (max-width: 900px) {
+
+  .footer__container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(177, 177, 177);
   }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
+
+  .footer__container--element:nth-of-type(2){
+    display: none;
+  }
+  .footer__container--element:nth-of-type(3){
+
+    margin-right:  -150px;
   }
 }
