--- a/gymEatLanding/src/app/que-es-gym-eat/que-es-gym-eat.component.scss
+++ b/gymEatLanding/src/app/que-es-gym-eat/que-es-gym-eat.component.scss
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   background-image: url('../../assets/imd/victorGris.jpg');
-  min-height: 840px;   /*Que tenga una altura mínima*/
+  min-height: 100vh;   /*Que tenga una altura mínima*/
   background-attachment: fixed; /*Background fijo*/
   background-size: cover;
   background-position: center;
